proj1/testing/correct/testCorrect.inp
* B BETA I II III AAAA
PLLUA EBXOC J

* C GAMMA V I II XYZT
LABRAN JAMS