proj1/testing/error/badsetting1.inp
* I B II III AAAA
Hello World